# BlackHoleResearch

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  PHASE2_PLAN.md  README.md  app.py  codemeta.json  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.cursor/rules/: 00-project-context.mdc  01-documentation-standards.mdc  02-scientific-honesty.mdc  03-python-style.mdc  04-fits-handling.mdc  05-testing-discipline.mdc  06-ui-patterns.mdc  07-reproducibility.mdc  08-adr.mdc  09-commit-and-pr.mdc
.github/workflows/: ci.yml
blackhole/: __init__.py  _style.py  calibration.py  catalog.py  io.py  lightcurves.py  photometry.py  provenance.py  sed.py  spectra.py  wcs_plot.py
blackhole/physics/: __init__.py  accretion.py  infrared.py  spectral_xray.py  variability.py
docs/: PITFALLS.md  __init__.py  calibration_table.md  literature_seds.py
docs/adr/: README.md
fits_data/: .gitkeep  MANIFEST.json
scripts/: download_data.py
tests/: conftest.py  test_calibration.py  test_catalog.py  test_io.py  test_lightcurves.py  test_photometry.py  test_provenance.py  test_sed.py  test_spectra.py  test_wcs_plot.py
tests/test_physics/: test_accretion.py  test_infrared.py  test_spectral_xray.py  test_variability.py
